Fix logo image source and clean HTML structure
Updated logo image source and cleaned up HTML structure.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="logo">
       <a href="#top" class="logo">
-        <img src="img/Black_White_Minimalist_Modern_Aesthetic_Initials_Font_Logo-removebg-preview (1).png">
+        <img src="logo.png">
         <span>Studio YB</span>
       </a>
     </div>
@@ -43,7 +43,7 @@
       </section>
       <section id="sobre" class="bannersobre">
         <div class="photobanner">
-          <img src="img/Black_White_Minimalist_Modern_Aesthetic_Initials_Font_Logo-removebg-preview (1).png"
+          <img src="logo.png"
             alt="minha foto">
         </div>
         <div class="conteudosobre">
@@ -61,36 +61,36 @@
         <div class="carrossel">
           <div class="group">
             <div class="card">
-              <img src="img/IMG_7752.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_7875.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_7911.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_8132.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_8458_jpg.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
           </div>
           <div aria-hidden class="group">
             <div class="card">
-              <img src="img/IMG_7752.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_7875.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_7911.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_8132.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
             <div class="card">
-              <img src="img/IMG_8458_jpg.jpg" alt="studioyb">
+              <img src="logo.png" alt="studioyb">
             </div>
           </div>
 
@@ -121,4 +121,5 @@
 
 
 </html>
+
 
